Completed the basics of this tutorial
