# docs/swagger.json
@@ -3,20 +3,15 @@
     "info": {
         "description": "Managing tool for album records",
         "title": "Album Store API",
-        "termsOfService": "http://swagger.io/terms/",
         "contact": {
             "name": "API Support",
             "email": "arian.khanjani@gmail.com"
         },
-        "license": {
-            "name": "Apache 2.0",
-            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
-        },
-        "version": "1.0"
+        "version": "0.1"
     },
     "basePath": "/",
     "paths": {
-        "/albums": {
+        "/v1/albums": {
             "get": {
                 "description": "Get details of all albums",
                 "consumes": [
@@ -25,17 +20,14 @@
                 "produces": [
                     "application/json"
                 ],
-                "tags": [
-                    "albums"
-                ],
-                "summary": "Get details of all albums",
+                "summary": "Get all albums",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/main.album"
+                                "$ref": "#/definitions/models.Album"
                             }
                         }
                     }
@@ -49,18 +41,15 @@
                 "produces": [
                     "application/json"
                 ],
-                "tags": [
-                    "albums"
-                ],
                 "summary": "Create a new album record",
                 "parameters": [
                     {
                         "description": "Create Album",
-                        "name": "album",
+                        "name": "models.Album",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/main.album"
+                            "$ref": "#/definitions/models.Album"
                         }
                     }
                 ],
@@ -68,20 +57,17 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/main.album"
+                            "$ref": "#/definitions/models.Album"
                         }
                     }
                 }
             }
         },
-        "/albums/{id}": {
+        "/v1/albums/{id}": {
             "get": {
                 "description": "Get details of an album",
                 "produces": [
                     "application/json"
-                ],
-                "tags": [
-                    "albums/:id"
                 ],
                 "summary": "Get details of an album",
                 "parameters": [
@@ -99,7 +85,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/main.album"
+                                "$ref": "#/definitions/models.Album"
                             }
                         }
                     }
@@ -108,7 +94,7 @@
         }
     },
     "definitions": {
-        "main.album": {
+        "models.Album": {
             "type": "object",
             "properties": {
                 "artist": {
